Added model evaluation, saliency maps, threshold tuning and improved model

--- a/Clinical_data_preparation.ipynb
+++ b/Clinical_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "aba16275-b22e-4c6a-bf21-dca2b93181ae",
+       "ref": "19797e22-7e77-477e-bdd5-aa352f625a4a",
        "rows": [
         [
          "0",
@@ -340,7 +340,7 @@
        "4           5     0     0     0  FOLFIRI-B   1.609856   4.435318"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{406}\n"
+      "set()\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,43 +1225,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_7324\\904612889.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_input['path_resp'] = training_input['TRG_cat'].notna().astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_7324\\904612889.py:23: SettingWithCopyWarning: \n",
+      "  training_input['treatment_P'] = training_input['treatment'].str.endswith('P').astype(int)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_labels['no_resp'] = (training_labels['TRG_cat'] == 'No histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_7324\\904612889.py:24: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_labels['partial_resp'] = (training_labels['TRG_cat'] == 'Partial histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_7324\\904612889.py:25: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_labels['major_resp'] = (training_labels['TRG_cat'] == 'Major histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Roaming\\MobaXterm\\slash\\var\\log\\xwin\\ipykernel_7324\\904612889.py:28: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_labels[['no_resp', 'partial_resp', 'major_resp']] = training_labels[['no_resp', 'partial_resp', 'major_resp']].fillna(0)\n"
+      "  training_labels['major_resp'] = (training_labels['TRG_cat'] == 'Major histological response').astype(int)\n"
      ]
     }
    ],
@@ -1270,9 +1264,6 @@
     "\n",
     "training_input = training_data[[\"SubjectKey\", \"KRAS\", \"BRAF\", \"NRAS\", \"treatment\", \"TRG_cat\"]]\n",
     "training_labels = training_data[[\"SubjectKey\", \"PFSm\", \"OSm\", \"TRG_cat\"]]\n",
-    "\n",
-    "#convert TRG_cat into whether it contains the input or not \n",
-    "training_input['path_resp'] = training_input['TRG_cat'].notna().astype(int)\n",
     "\n",
     "\n",
     "# One-hot encode treatment into two categories: ending with 'P' or 'B'\n",
@@ -1286,14 +1277,19 @@
     "#-------------------------------\n",
     "\n",
     "#one-hot encode path. response into three categories: no resp, partial response, major response\n",
-    "#Nan is all 0\n",
+    "\n",
     "# One-hot encode the TRG_cat column into three categories\n",
     "training_labels['no_resp'] = (training_labels['TRG_cat'] == 'No histological response').astype(int)\n",
     "training_labels['partial_resp'] = (training_labels['TRG_cat'] == 'Partial histological response').astype(int)\n",
     "training_labels['major_resp'] = (training_labels['TRG_cat'] == 'Major histological response').astype(int)\n",
     "\n",
-    "# Fill NaN values with 0\n",
-    "training_labels[['no_resp', 'partial_resp', 'major_resp']] = training_labels[['no_resp', 'partial_resp', 'major_resp']].fillna(0)\n",
+    "# Convert rows where no_resp, partial_resp, and major_resp are all 0 to -1\n",
+    "training_labels.loc[\n",
+    "    (training_labels['no_resp'] == 0) & \n",
+    "    (training_labels['partial_resp'] == 0) & \n",
+    "    (training_labels['major_resp'] == 0), \n",
+    "    ['no_resp', 'partial_resp', 'major_resp']\n",
+    "] = -1\n",
     "\n",
     "half_year_pfs, one_year_pfs, two_year_pfs = 6, 12, 24  \n",
     "one_year_os, three_year_os, five_year_os = 12, 36, 60  \n",
@@ -1315,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
