--- a/data_understanding.ipynb
+++ b/data_understanding.ipynb
@@ -138,9 +138,7 @@
     }
    ],
    "source": [
-    "\n",
     "print(\"Current working directory:\", os.getcwd())\n",
-    "\n",
     "\n",
     "\n",
     "# Read the CSV file\n",
@@ -158,101 +156,11 @@
     "class_weights = torch.tensor(class_weights, dtype=torch.float32)\n",
     "print(class_weights)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (8) must match the size of tensor b (28) at non-singleton dimension 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 59\u001b[0m\n\u001b[0;32m     56\u001b[0m outputs \u001b[38;5;241m=\u001b[39m model(inputs)\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# Compute the weighted loss using the tumor mask\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mcriterion\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtumor_mask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;66;03m# Backpropagation\u001b[39;00m\n\u001b[0;32m     62\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
-      "File \u001b[1;32mc:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\P095550\\OneDrive - Amsterdam UMC\\Documenten\\GitHub\\CRLM-morph-features\\.venv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "Cell \u001b[1;32mIn[13], line 33\u001b[0m, in \u001b[0;36mWeightedBCEWithMaskLoss.forward\u001b[1;34m(self, outputs, labels, tumor_mask)\u001b[0m\n\u001b[0;32m     30\u001b[0m loss \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mbinary_cross_entropy(outputs, labels, reduction\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Apply tumor mask to the loss (weight the tumor regions higher)\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m weighted_loss \u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtumor_mask\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m# Return the mean loss (only considering tumor regions)\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m weighted_loss\u001b[38;5;241m.\u001b[39mmean()\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (8) must match the size of tensor b (28) at non-singleton dimension 2"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "# Example model (for binary classification, e.g., tumor detection)\n",
-    "class SimpleCNN(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(SimpleCNN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
-    "        self.fc1 = nn.Linear(64 * 28 * 28, 128)  # Assume input image is 28x28\n",
-    "        self.fc2 = nn.Linear(128, 1)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = x.view(x.size(0), -1)  # Flatten\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = torch.sigmoid(self.fc2(x))  # Sigmoid for binary classification\n",
-    "        return x\n",
-    "\n",
-    "# Custom Weighted Loss\n",
-    "class WeightedBCEWithMaskLoss(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(WeightedBCEWithMaskLoss, self).__init__()\n",
-    "\n",
-    "    def forward(self, outputs, labels, tumor_mask):\n",
-    "        # Calculate binary cross entropy loss (without reduction)\n",
-    "        loss = F.binary_cross_entropy(outputs, labels, reduction='none')\n",
-    "        \n",
-    "        # Apply tumor mask to the loss (weight the tumor regions higher)\n",
-    "        weighted_loss = loss * tumor_mask\n",
-    "        \n",
-    "        # Return the mean loss (only considering tumor regions)\n",
-    "        return weighted_loss.mean()\n",
-    "\n",
-    "# Initialize model\n",
-    "model = SimpleCNN()\n",
-    "\n",
-    "# Example input image and labels (batch_size, channels, height, width)\n",
-    "inputs = torch.randn(8, 1, 28, 28)  # Batch of 8 grayscale images (28x28)\n",
-    "labels = torch.randint(0, 2, (8, 1), dtype=torch.float32)  # Binary labels for tumor presence\n",
-    "\n",
-    "# Tumor mask: 1 for tumor regions, 0 for background (simulated here)\n",
-    "tumor_mask = torch.randn(8, 1, 28, 28)  # Simulate a mask of the same size as the image\n",
-    "tumor_mask = (tumor_mask > 0.5).float()  # Convert to binary mask\n",
-    "\n",
-    "# Loss function\n",
-    "criterion = WeightedBCEWithMaskLoss()\n",
-    "\n",
-    "# Optimizer\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
-    "\n",
-    "# Forward pass\n",
-    "outputs = model(inputs)\n",
-    "\n",
-    "# Compute the weighted loss using the tumor mask\n",
-    "loss = criterion(outputs, labels, tumor_mask)\n",
-    "\n",
-    "# Backpropagation\n",
-    "optimizer.zero_grad()\n",
-    "loss.backward()\n",
-    "optimizer.step()\n",
-    "\n",
-    "# Print loss value\n",
-    "print(f\"Loss with Tumor Mask: {loss.item():.4f}\")\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
