--- a/pre_training_data_preparation.ipynb
+++ b/pre_training_data_preparation.ipynb
@@ -12,7 +12,8 @@
     "import os\n",
     "import monai \n",
     "import pydicom\n",
-    "import dicom2nifti"
+    "import dicom2nifti\n",
+    "import SimpleITK as sitk"
    ]
   },
   {
@@ -122,8 +123,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import SimpleITK as sitk\n",
-    "\n",
     "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/scans\"\n",
     "segm_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/segmentations\"\n",
     "\n",
