Model development and saliency map methods

--- a/Scans_data_preparation.ipynb
+++ b/Scans_data_preparation.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing"
+    "## Code testing"
    ]
   },
   {
@@ -66,7 +66,7 @@
     "\n",
     "#apply mask to image\n",
     "liver_image = np.copy(image_data)\n",
-    "liver_image[~liver_mask] = 0\n",
+    "liver_image[~liver_mask] = -1000\n",
     "\n",
     "# Find the indices of the liver mask\n",
     "mask_indices = np.argwhere(liver_mask)\n",
@@ -88,6 +88,13 @@
     "# # Save the new NIfTI image to a file\n",
     "#output_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/boundingbox_liver_scans/test_liver_image.nii.gz\"\n",
     "nib.save(new_image, output_path)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training (CAIRO5)"
    ]
   },
   {
@@ -274,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1019,7 @@
     "\n",
     "    #apply mask to image\n",
     "    liver_image = np.copy(image_data)\n",
-    "    liver_image[~liver_mask] = 0\n",
+    "    liver_image[~liver_mask] = -1000\n",
     "\n",
     "    # Find the indices of the liver mask\n",
     "    mask_indices = np.argwhere(liver_mask)\n",
@@ -1131,6 +1138,34 @@
     "\n",
     "    # Save the resized image\n",
     "    nib.save(resized_image, resized_image_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing (CAIRO5 subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### copy to correct folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data understanding"
    ]
   },
   {
