Changed model architecture

--- a/Clinical_data_preparation.ipynb
+++ b/Clinical_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "19797e22-7e77-477e-bdd5-aa352f625a4a",
+       "ref": "32944218-9958-4efa-84ee-9cfd71564950",
        "rows": [
         [
          "0",
@@ -339,7 +339,7 @@
        "4           5     0     0     0  FOLFIRI-B   1.609856   4.435318"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,13 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#select subjects with scans\n",
     "\n",
-    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_tumor_scans\"\n",
+    "scans_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Training/paired_scans\"\n",
     "subjects = []\n",
     "\n",
     "for scan in os.listdir(scans_path):\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,32 +415,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_input['treatment_P'] = training_input['treatment'].str.endswith('P').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:20: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_labels['no_resp'] = (training_labels['TRG_cat'] == 'No histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:21: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_labels['partial_resp'] = (training_labels['TRG_cat'] == 'Partial histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_16844\\1670222137.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1388,7 +1388,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create OS labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\986918905.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_data_OS[['index_os_survival']] = training_data_OS['OSm'].apply(assign_survival_categories)\n"
+     ]
+    }
+   ],
+   "source": [
+    "training_data_OS = training_data[[\"SubjectKey\", \"OSm\"]]\n",
+    "\n",
+    "def assign_survival_categories(os_time):\n",
+    "    if os_time >= 60:\n",
+    "        return pd.Series([3])\n",
+    "    elif os_time >= 36:\n",
+    "        return pd.Series([2])\n",
+    "    elif os_time >= 12:\n",
+    "        return pd.Series([1])\n",
+    "    else:\n",
+    "        return pd.Series([0])\n",
+    "\n",
+    "# Apply function and create new columns\n",
+    "training_data_OS[['index_os_survival']] = training_data_OS['OSm'].apply(assign_survival_categories)\n",
+    "\n",
+    "\n",
+    "# Drop the original 'OSm' column\n",
+    "training_labels_OS = training_data_OS.drop(columns=[\"SubjectKey\", \"OSm\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "index_os_survival",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "9d278c29-d27a-4a3f-9a11-4f16aefb6b43",
+       "rows": [
+        [
+         "0",
+         "1"
+        ],
+        [
+         "1",
+         "2"
+        ],
+        [
+         "2",
+         "3"
+        ],
+        [
+         "3",
+         "2"
+        ],
+        [
+         "4",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index_os_survival</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index_os_survival\n",
+       "0                  1\n",
+       "1                  2\n",
+       "2                  3\n",
+       "3                  2\n",
+       "4                  2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_labels_OS.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the selected columns to a CSV file\n",
+    "training_labels_OS.to_csv('training_labels_OS.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training data insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### create class weights for os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class Weights: {0: 1.6363636363636365, 1: 0.496551724137931, 2: 0.96, 3: 3.0}\n",
+      "dict_values([1.6363636363636365, 0.496551724137931, 0.96, 3.0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "import numpy as np\n",
+    "\n",
+    "# Extract the class labels\n",
+    "class_labels = training_labels_OS['index_os_survival']\n",
+    "\n",
+    "# Compute class weights\n",
+    "class_weights = compute_class_weight(class_weight='balanced', classes=np.unique(class_labels), y=class_labels)\n",
+    "\n",
+    "# Convert to a dictionary for easy use\n",
+    "class_weights_dict = {cls: weight for cls, weight in zip(np.unique(class_labels), class_weights)}\n",
+    "\n",
+    "print(\"Class Weights:\", class_weights_dict)\n",
+    "print(class_weights_dict.values())"
    ]
   },
   {
