--- a/tumor_mask_preparation.ipynb
+++ b/tumor_mask_preparation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\P095550\\Documents\\CRLM-morph-features\\CRLM-morph-features\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import numpy as np \n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -769,58 +778,60 @@
     "\n",
     "for scan in os.listdir(all_scans_path):\n",
     "    print(f\"Currently processing: {scan}\")\n",
-    "    \n",
-    "    # Load image and corresponding segmentation\n",
-    "    image = nib.load(os.path.join(all_scans_path, scan))\n",
     "\n",
-    "    segm_filename = scan.replace(\"_0000\", \"\")\n",
-    "    segmentation = nib.load(os.path.join(all_segmentations_path, segm_filename))\n",
-    "\n",
-    "    image_data = image.get_fdata()\n",
-    "    segmentation_data = segmentation.get_fdata()\n",
-    "\n",
-    "    # Create a liver mask (labels 12 and 13)\n",
-    "    liver_mask = (segmentation_data == 12) | (segmentation_data == 13)\n",
-    "\n",
-    "    # Apply the liver mask to the image\n",
-    "    liver_image = np.copy(image_data)\n",
-    "    liver_image[~liver_mask] = 0\n",
-    "\n",
-    "    # Find the indices of the liver mask\n",
-    "    mask_indices = np.argwhere(liver_mask)\n",
-    "\n",
-    "    # Calculate the bounding box for the liver\n",
-    "    min_indices = mask_indices.min(axis=0)\n",
-    "    max_indices = mask_indices.max(axis=0)\n",
-    "\n",
-    "    # Crop the liver image using the bounding box\n",
-    "    cropped_liver_image = liver_image[min_indices[0]:max_indices[0]+1, min_indices[1]:max_indices[1]+1, min_indices[2]:max_indices[2]+1]\n",
-    "\n",
-    "    # Crop the segmentation data using the same bounding box\n",
-    "    cropped_segmentation_data = segmentation_data[min_indices[0]:max_indices[0]+1, min_indices[1]:max_indices[1]+1, min_indices[2]:max_indices[2]+1]\n",
-    "\n",
-    "    # Create a tumor mask (label 13) within the cropped liver region\n",
-    "    tumor_mask = (cropped_segmentation_data == 13)\n",
-    "\n",
-    "    # Apply binary dilation to the tumor mask\n",
-    "    dilated_tumor_mask = binary_dilation(tumor_mask, structure=structure, iterations=10)\n",
-    "\n",
-    "    # Apply the dilated tumor mask to the cropped liver image\n",
-    "    tumor_image = np.copy(cropped_liver_image)\n",
-    "    tumor_image[~dilated_tumor_mask.astype(bool)] = 0\n",
-    "\n",
-    "    # Create a new NIfTI image for the tumor segmentation\n",
-    "    new_image = nib.Nifti1Image(tumor_image, affine=image.affine, header=image.header)\n",
-    "\n",
-    "    # Save the new NIfTI image to a file with the original name\n",
     "    new_filename = (scan.split(\".\")[0])[0:-5] + \"_tumor.nii.gz\"\n",
-    "    output_file_path = os.path.join(tumor_segmentations_path, new_filename)\n",
-    "    nib.save(new_image, output_file_path)"
+    "    if new_filename not in os.listdir(tumor_segmentations_path):\n",
+    "        # Load image and corresponding segmentation\n",
+    "        image = nib.load(os.path.join(all_scans_path, scan))\n",
+    "\n",
+    "        segm_filename = scan.replace(\"_0000\", \"\")\n",
+    "        segmentation = nib.load(os.path.join(all_segmentations_path, segm_filename))\n",
+    "\n",
+    "        image_data = image.get_fdata()\n",
+    "        segmentation_data = segmentation.get_fdata()\n",
+    "\n",
+    "        # Create a liver mask (labels 12 and 13)\n",
+    "        liver_mask = (segmentation_data == 12) | (segmentation_data == 13)\n",
+    "\n",
+    "        # Apply the liver mask to the image\n",
+    "        liver_image = np.copy(image_data)\n",
+    "        liver_image[~liver_mask] = -1000\n",
+    "\n",
+    "        # Find the indices of the liver mask\n",
+    "        mask_indices = np.argwhere(liver_mask)\n",
+    "\n",
+    "        # Calculate the bounding box for the liver\n",
+    "        min_indices = mask_indices.min(axis=0)\n",
+    "        max_indices = mask_indices.max(axis=0)\n",
+    "\n",
+    "        # Crop the liver image using the bounding box\n",
+    "        cropped_liver_image = liver_image[min_indices[0]:max_indices[0]+1, min_indices[1]:max_indices[1]+1, min_indices[2]:max_indices[2]+1]\n",
+    "\n",
+    "        # Crop the segmentation data using the same bounding box\n",
+    "        cropped_segmentation_data = segmentation_data[min_indices[0]:max_indices[0]+1, min_indices[1]:max_indices[1]+1, min_indices[2]:max_indices[2]+1]\n",
+    "\n",
+    "        # Create a tumor mask (label 13) within the cropped liver region\n",
+    "        tumor_mask = (cropped_segmentation_data == 13)\n",
+    "\n",
+    "        # Apply binary dilation to the tumor mask\n",
+    "        dilated_tumor_mask = binary_dilation(tumor_mask, structure=structure, iterations=10)\n",
+    "\n",
+    "        # Apply the dilated tumor mask to the cropped liver image\n",
+    "        tumor_image = np.copy(cropped_liver_image)\n",
+    "        tumor_image[~dilated_tumor_mask.astype(bool)] = -1000\n",
+    "\n",
+    "        # Create a new NIfTI image for the tumor segmentation\n",
+    "        new_image = nib.Nifti1Image(tumor_image, affine=image.affine, header=image.header)\n",
+    "\n",
+    "        # Save the new NIfTI image to a file with the original name\n",
+    "        \n",
+    "        output_file_path = os.path.join(tumor_segmentations_path, new_filename)\n",
+    "        nib.save(new_image, output_file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
